# Autonomous-Navigation-Robot-ROS-PCL

./: README.md  logistic_regression2.ipynb  multiple_linear_regression2.ipynb
mobile_robot/: CMakeLists.txt  package.xml  readme.md
mobile_robot/config/: robot.rviz
mobile_robot/launch/: gazebo.launch  gazebo2.launch  gazebo3.launch  voxelgridfilter.launch
mobile_robot/src/: pclonly.cpp
mobile_robot/urdf/: rover.urdf.xacro
